github pages setup

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mebestaca.github.io/face-recognition/",
   "name": "facerecognition",
   "version": "0.1.0",
   "private": true,
