--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "./",
+  "homepage": "https://mebestaca.github.io/face-recognition/",
   "name": "facerecognition",
   "version": "0.1.0",
   "private": true,
